Bug 160591 - FILESAVE PPTX: blue shape turns white, white text turns black
Summary: FILESAVE PPTX: blue shape turns white, white text turns black
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-04-08 21:25 UTC by Gerald Pfeifer
Modified: 2024-06-08 14:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (5.96 MB, application/vnd.ms-powerpoint)
2024-04-08 21:25 UTC, Gerald Pfeifer
Details
Visual comparison: PowerPoint (left) - Impress after saving as PPTX (right) (377.48 KB, image/png)
2024-04-08 21:27 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2024-04-08 21:25:58 UTC
Created attachment 193576 [details]
Sample slide (PPTX)

1. Open the attached PPTX document in Impress.
   Looks pretty much like in PowerPoint!

2. Save from Impress as PPTX under a different name.

3. Restart Impress and open the just saved document.

4. Yikes! 
   a. The white text in the center ("Am Dam Des") is now black.
   b. The copyright notice in the lower left corner turned from white
      to black, too.
   c. The central element changed from blue to white.


Item 4.a and 4.b, text changing from white to black is a regression;
  Version: 7.5.6.0.0+ (X86_64) / LibreOffice Community
  Build ID: 0a5c49aa4f65c8e661f7da3934ab9bea8cacf662
  CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
does not have it.

Full extent seen with

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 30c6e51fc9cb0fa864e1755271343d847fcced25
  CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
Comment 1 Gerald Pfeifer 2024-04-08 21:27:12 UTC
Created attachment 193577 [details]
Visual comparison: PowerPoint (left) - Impress after saving as PPTX (right)
Comment 2 Regina Henschel 2024-04-09 08:10:04 UTC
The error is in export in file slideMaster1.xml.
The mapping is wrong in p:sldMaster > p:clrMap.
It should be bg2="dk2" and tx2="lt2", but it is bg2="lt2" and tx2="dk2".

Not really a regression, because LO7.5 has no theme support, but more an implementation error in the new feature "Theme".
Comment 3 Regina Henschel 2024-04-09 08:59:00 UTC
It seems the export of the color map is in https://opengrok.libreoffice.org/xref/core/sd/source/filter/eppt/pptx-epptooxml.cxx?r=9adcf67c#1502

From the comment there it seems, as if this part is missing from implementation of "Theme".

@Tomaž, could you please comment whether I'm right and comment about the state of supporting <clrMap> in master slides?
Comment 4 Xisco Faulí 2024-04-09 10:45:31 UTC
The text color changing to black is a regression introduced by:

author	Regina Henschel <rb.henschel@t-online.de>	2023-01-03 20:13:12 +0100
committer	Regina Henschel <rb.henschel@t-online.de>	2023-01-05 09:13:37 +0000
commit f4a568fc0553603fbf05477e0942af4e8466fba0 (patch)
tree 55cd3b8556c83bff6b4b7f1ea27fc910d253b4ec
parent bb20dee2ef1b0804065e1cda2c834d257fdd90ed (diff)
tdf#152840 add ST_ThemeColor values to ClrScheme::getColor

Bisected with: bibisect-linux64-7.6
Comment 5 Commit Notification 2024-06-07 12:38:57 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/805fd61f8efaaac119bbe28ab51617c07f0d7058

tdf#160591 PPTX export: fix colormap mapping in slide master

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gerald Pfeifer 2024-06-08 14:05:35 UTC
I am happy to confirm that the bug document here as well as the
original, significantly larger and more complex, document are now
fine when again saved as PPTX with today's snapshot (unlike the
one from two days ago):

  Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
  Build ID: f714fb262ad8561afcababf4b7a97dedb1b72c15
  CPU threads: 12; OS: Linux 6.9; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US