crashtesting: out of bounds on reexport of forum-mso-en4-290152.pptx to pptx

probably since:

commit 805fd61f8efaaac119bbe28ab51617c07f0d7058
Date:   Thu Jun 6 19:47:45 2024 +0200

    tdf#160591 PPTX export: fix colormap mapping in slide master

    Change-Id: I154f0ff1769fbda361ec62f1dd589ca0d7686bd9
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168506

Change-Id: I3ec45b2a0b78324e8512acbcc3a7544c196f670d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168851
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>